Changes changes changes

--- a/css/style.css
+++ b/css/style.css
@@ -1103,7 +1103,7 @@ textarea.form-control {
 /*-------------------------------------------------------*/
 
 .page-title {
-  background: url(../upload/blog_title_bg.jpg) no-repeat fixed;
+  background: url(../upload/devfest2015_resized.png) no-repeat fixed;
   position: relative;
   background-position: 50% 0%;
   max-height:500px;
